Drawing in 3D viewport changes object colors #74782

Closed
opened 2020-03-15 14:39:44 +01:00 by Vyacheslav Kobozev · 16 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-14 00:31, hash: acab745078
Worked: version: 2.83 (sub 8), branch: master, commit date: 2020-03-10 19:12, hash: f9cca12886, type: Release
build date: 2020-03-11, 07:08:52

Short description of error
Some "modal" drawing in viewport causes artifacts on object colors. This seems to happen when redrawing gizmos or drawing annotation.
Operator like box select does not cause this issue

Untitled.png

Exact steps for others to reproduce the error

  • New General template
  • set cube to smooth shading (only to make this effect more prominent)
  • start drawing annotation
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-14 00:31, hash: `acab745078` Worked: version: 2.83 (sub 8), branch: master, commit date: 2020-03-10 19:12, hash: f9cca128869f, type: Release build date: 2020-03-11, 07:08:52 **Short description of error** Some "modal" drawing in viewport causes artifacts on object colors. This seems to happen when redrawing gizmos or drawing annotation. Operator like box select does not cause this issue ![Untitled.png](https://archive.blender.org/developer/F8412370/Untitled.png) **Exact steps for others to reproduce the error** - New General template - set cube to smooth shading (only to make this effect more prominent) - start drawing annotation

Added subscriber: @Vyach

Added subscriber: @Vyach

#74817 was marked as duplicate of this issue

#74817 was marked as duplicate of this issue
Member

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Richard Antalik changed title from Face sets/mask color become darker/more saturated when some overlays active to Drawing in 3D viewport changes object colors 2020-03-17 16:48:36 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk
Member
CC @Jeroen-Bakker CC @fclem

@Jeroen-Bakker seems like the TAA accumulation continues and it gets out of precision.

@Jeroen-Bakker seems like the TAA accumulation continues and it gets out of precision.
Member

I've seen more related issues. Will have a look

I've seen more related issues. Will have a look
Jeroen Bakker self-assigned this 2020-03-23 14:19:44 +01:00

This issue was referenced by 58ac113b76

This issue was referenced by 58ac113b76d950c72c7319094f7e6cc61c70dc59
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Hi @Jeroen-Bakker , the following report #74817 was closed as duplicated of this one that you just fixed, but apparently the issue was not resolved?

Also related #74980

Hi @Jeroen-Bakker , the following report #74817 was closed as duplicated of this one that you just fixed, but apparently the issue was not resolved? Also related #74980

This issue was referenced by b759857825

This issue was referenced by b759857825b80af98621c2ff4b52f106ab79576c
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This issue was referenced by 28c3d952db

This issue was referenced by 28c3d952dbde6f1e911360f716cb1cdb65863b5e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74782
No description provided.